# my-daily-tasks-agent

./: AGENTS.md  README.md  app.py  main.py  notebook.ipynb  pyproject.toml
mdt_agent/: agent copy.py  agent.py  tools.py  utils.py
tests/: conftest.py  judge.py  mock_tools.py  patch_agent.py  test_agent.py  test_docstrings.py  test_judge.py
